[package]
name = "perb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.4", features = ["rb-sys-interop"] }
rb-sys = "0.9.53"
dynasmrt = "1"

[profile.release]
debug = true
